@@ -2,7 +2,7 @@ dnl // Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.50)
 AC_INIT(bochs.h)
-AC_REVISION([[$Id: configure.in,v 1.375 2008/10/21 13:45:03 sshwarts Exp $]])
+AC_REVISION([[$Id: configure.in,v 1.376 2008/12/11 21:00:01 sshwarts Exp $]])
 AC_CONFIG_HEADER(config.h)
 AC_CONFIG_HEADER(ltdlconf.h)
 
@@ -937,6 +937,29 @@ AC_ARG_ENABLE(global-pages,
     fi
     ]
   )
+
+AC_MSG_CHECKING(for long mode 1G pages support)
+AC_ARG_ENABLE(1g-pages,
+  [  --enable-1g-pages                 support for 1G pages in long mode],
+  [if test "$enableval" = yes; then
+    AC_MSG_RESULT(yes)
+    AC_DEFINE(BX_SUPPORT_1G_PAGES, 1)
+    support_1g_pages=1
+   else
+    AC_MSG_RESULT(no)
+    AC_DEFINE(BX_SUPPORT_1G_PAGES, 0)
+    support_1g_pages=0
+   fi],
+  [
+    AC_MSG_RESULT(no)
+    AC_DEFINE(BX_SUPPORT_1G_PAGES, 0)
+    support_1g_pages=0
+    ]
+  )
+
+if test "$support_1g_pages" = 1 -a "$use_x86_64" = 0; then
+  AC_MSG_ERROR([x86-64 mode is required for 1G pages support])
+fi
 
 if test "$bx_cpu_level" -lt 4 -a "$support_large_pages" = 1; then
   AC_MSG_ERROR([for large paging support the CPU level must be >= 4])
