@@ -26,7 +26,7 @@ TODO (know issues in CPU model):
 [!] Some of APIC functionality still not implemented, for example
 
     - Globally disabled APIC
-    - NMI, SMI, INIT signals, LVT pins handling
+    - LVT pins handling
     - Filter interrupts according processor priority (PPR)
 
 [!] REP NOP is PAUSE (on P4/XEON)
